--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,14 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://dev-smbc.aveas.co.id",
+  "proxy": "https://aliceblue-frog-896885.hostingersite.com",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "bulma": "^1.0.1",
     "cors": "^2.8.5",
     "datatables.net": "^2.1.2",
@@ -22,6 +23,7 @@
     "jszip": "^3.10.1",
     "pdfmake": "^0.2.10",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^8.1.3",
